css: Add spacing below videos. guidance: Copy-edit to fix notes on one-line.

--- a/docs/_static/basic.css
+++ b/docs/_static/basic.css
@@ -33,6 +33,7 @@ img[alt="org-id.guide"] {
 
 .video-wrapper {
   position: relative;
+  margin-bottom: 1em;
   padding-bottom: 56.25%; /* 16:9 */
   height: 0;
 }
